sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/DD_Multi_Select_Picklist_SOSL_Return__mdt.object-meta.xml
<CustomObject>
    <description>SOSL Return Definitions for &apos;DD Multi Select Picklist Object Search&apos;</description>
    <label>DD Multi Select Picklist SOSL Return</label>
    <pluralLabel>DD Multi Select Picklist SOSL Return</pluralLabel>
</CustomObject>