sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/Dropdown_SubLabel_Merge_Format__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_SubLabel_Merge_Format__c</fullName>
    <label>Dropdown SubLabel Merge Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>