sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/Exclude_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Field_Name__c</fullName>
    <label>Exclude Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>