sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/IconSrc_Merge_Format__c.field-meta.xml
<CustomField>
    <fullName>IconSrc_Merge_Format__c</fullName>
    <label>IconSrc Merge Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>