sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Limit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>