sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <label>Order By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>