sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>DD_Multi_Select_Picklist_Master__mdt</referenceTo>
    <relationshipLabel>DD Multi Select Picklist SOSL Return</relationshipLabel>
    <relationshipName>DD_Multi_Select_Picklist_SOSL_Return</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>