sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/Return_Fields__c.field-meta.xml
<CustomField>
    <fullName>Return_Fields__c</fullName>
    <label>Return Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>