sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <label>SObject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>