sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/Value_Merge_Format__c.field-meta.xml
<CustomField>
    <fullName>Value_Merge_Format__c</fullName>
    <label>Value Merge Format</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>