sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <label>Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>