sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/validationRules/Field_Req_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Req_1</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Return_Fields__c )</errorConditionFormula>
    <errorDisplayField>Return_Fields__c</errorDisplayField>
    <errorMessage>This is required...</errorMessage>
</ValidationRule>