sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_SOSL_Return__mdt/validationRules/Parent_should_be_of_type_SOSL.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_should_be_of_type_SOSL</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Parent__r.Type__c,&apos;SOSL&apos;))</errorConditionFormula>
    <errorDisplayField>Parent__c</errorDisplayField>
    <errorMessage>Parent Type should be &apos;SOSL&apos;</errorMessage>
</ValidationRule>